--- a/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
+++ b/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
@@ -11,6 +11,7 @@
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
 		<UseAppHost>false</UseAppHost>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<RootNamespace>Mosa.Demo.VBEWorld.x86</RootNamespace>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugType>full</DebugType>
