- Bug fixes + refactoring

--- a/Source/CodeMaid.config
+++ b/Source/CodeMaid.config
@@ -48,7 +48,7 @@
                 <value>True</value>
             </setting>
             <setting name="Cleaning_UpdateSingleLineMethods" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Cleaning_InsertBlankLinePaddingAfterMethods" serializeAs="String">
                 <value>True</value>
@@ -270,7 +270,7 @@
             </setting>
             <setting name="Cleaning_InsertBlankSpaceBeforeSelfClosingAngleBrackets"
                 serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="Cleaning_InsertExplicitAccessModifiersOnEvents"
                 serializeAs="String">
@@ -389,6 +389,18 @@
             <setting name="Cleaning_UpdateFileHeaderCSharp" serializeAs="String">
                 <value>// Copyright (c) MOSA Project. Licensed under the New BSD License.
 </value>
+            </setting>
+            <setting name="Cleaning_InsertBlankLinePaddingBeforePropertiesSingleLine"
+                serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Cleaning_InsertBlankLinePaddingAfterPropertiesMultiLine"
+                serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Cleaning_InsertBlankLinePaddingBeforePropertiesMultiLine"
+                serializeAs="String">
+                <value>False</value>
             </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
