--- a/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
+++ b/Source/Mosa.Demo.SVGAWorld.x86/Mosa.Demo.SVGAWorld.x86.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<OutputType>Exe</OutputType>
-		<StartupObject>Mosa.Demo.VBEWorld.x86.Boot</StartupObject>
+		<StartupObject>Mosa.Demo.SVGAWorld.x86.Boot</StartupObject>
 		<DebugType>full</DebugType>
 		<LangVersion>8.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
@@ -11,7 +11,7 @@
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
 		<UseAppHost>false</UseAppHost>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<RootNamespace>Mosa.Demo.VBEWorld.x86</RootNamespace>
+		<RootNamespace>Mosa.Demo.SVGAWorld.x86</RootNamespace>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
 		<DebugType>full</DebugType>
