--- a/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
+++ b/Source/Mosa.DeviceSystem/Mosa.DeviceSystem.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
     <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
+	<ProjectReference Include="..\Mosa.FileSystem\Mosa.FileSystem.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="RegionalPointer.cs" />
