--- a/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
+++ b/Source/Mosa.Plug.Korlib/Mosa.Plug.Korlib.csproj
@@ -20,5 +20,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Mosa.Runtime\Mosa.Runtime.csproj" />
     <ProjectReference Include="..\Mosa.Korlib\Mosa.Korlib.csproj" />
+    <ProjectReference Include="..\Mosa.DeviceSystem\Mosa.DeviceSystem.csproj" />
   </ItemGroup>
 </Project>
