--- a/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
+++ b/Source/Mosa.Utility.UnitTests/Mosa.Utility.UnitTests.csproj
@@ -59,9 +59,15 @@
 		<Compile Include="..\Mosa.UnitTests\Optimization\InterestingTests.cs" Link="Tests\Optimization\InterestingTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Optimization\RemAndModTests.cs" Link="Tests\Optimization\RemAndModTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Optimization\SwitchTests.cs" Link="Tests\Optimization\SwitchTests.cs" />
+		<Compile Include="..\Mosa.UnitTests\Optimization\SpecificTests.cs" Link="Tests\Optimization\SpecificTests.cs" />
 		
 		<Compile Include="..\Mosa.UnitTests\Other\CompilerBugTests.cs" Link="Tests\Other\CompilerBugTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Other\SpecificTests.cs" Link="Tests\Other\SpecificTests.cs" />
+
+		<Compile Include="..\Mosa.UnitTests\Other\AnalysisTests.cs" Link="Tests\Other\AnalysisTests.cs" />
+		<Compile Include="..\Mosa.UnitTests\Other\InterestingTests.cs" Link="Tests\Other\InterestingTests.cs" />
+		<Compile Include="..\Mosa.UnitTests\Other\LockTests.cs" Link="Tests\Other\LockTests.cs" />
+
 		<Compile Include="..\Mosa.UnitTests\Primitive\BooleanTests.cs" Link="Tests\Primitive\BooleanTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Primitive\BoxingTests.cs" Link="Tests\Primitive\BoxingTests.cs" />
 		<Compile Include="..\Mosa.UnitTests\Primitive\CharTests.cs" Link="Tests\Primitive\CharTests.cs" />
