Squashed commit of the following:
commit aff15b1bafe57a3e27ef6ffe5a2edc3a0fbe6e14
Author: AnErrupTion <anerruption@disroot.org>
Date:   Sat Apr 9 15:14:46 2022 +0200

    Changes

commit faa434ca548d21ba0e1424c9446d08a493dd6922
Author: AnErrupTion <anerruption@disroot.org>
Date:   Sat Apr 9 12:04:50 2022 +0200

    Cherry-pick changes

commit 414be6b52dd43915ab9026fc88faa08b298fb6b7
Author: Phil Garcia <phil@thinkedge.com>
Date:   Sun Mar 13 11:59:11 2022 -0700

    - WIP (#969)

--- a/Source/Mosa.VisualStudio.ProjectTemplate/Mosa.Starter.x86.csproj
+++ b/Source/Mosa.VisualStudio.ProjectTemplate/Mosa.Starter.x86.csproj
@@ -5,11 +5,12 @@
 		<OutputType>Exe</OutputType>
 		<StartupObject>$safeprojectname$.Boot</StartupObject>
 		<DebugType>full</DebugType>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>9.0</LangVersion>
 		<OutputPath>bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<DisableStandardFrameworkResolution>true</DisableStandardFrameworkResolution>
 		<DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+		<UseAppHost>false</UseAppHost>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<ItemGroup>
@@ -19,9 +20,4 @@
 		<PackageReference Include="Mosa.Runtime" Version="*" />
 		<PackageReference Include="Mosa.Tools.Package" Version="*" />
 	</ItemGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<StartAction>Program</StartAction>
-		<StartProgram>C:\Program Files (x86)\MOSA-Project\bin\Mosa.Tool.Bootstrap.exe</StartProgram>
-		<StartArguments>$safeprojectname$.exe</StartArguments>
-	</PropertyGroup>
 </Project>
