--- a/Source/Mosa.Tool.Bootstrap/Mosa.Tool.Bootstrap.csproj
+++ b/Source/Mosa.Tool.Bootstrap/Mosa.Tool.Bootstrap.csproj
@@ -5,8 +5,8 @@
 		<UseWindowsForms>true</UseWindowsForms>
 		<Title>Mosa.Tool.Bootstrap</Title>
 		<Company>MOSA Project</Company>
-		<Copyright>Copyright © 2021</Copyright>
-		<LangVersion>8.0</LangVersion>
+		<copyright>Copyright © 2022</copyright>
+		<LangVersion>9.0</LangVersion>
 		<DebugType>full</DebugType>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
