--- a/Source/Mosa.Tool.Compiler/Mosa.Tool.Compiler.csproj
+++ b/Source/Mosa.Tool.Compiler/Mosa.Tool.Compiler.csproj
@@ -4,8 +4,8 @@
 		<OutputType>Exe</OutputType>
 		<Title>Mosa.Tool.Compiler</Title>
 		<Company>MOSA Project</Company>
-		<Copyright>Copyright © 2021</Copyright>
-		<LangVersion>8.0</LangVersion>
+		<copyright>Copyright © 2022</copyright>
+		<LangVersion>9.0</LangVersion>
 		<DebugType>full</DebugType>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
