--- a/Source/Mosa.Utility.Configuration/Mosa.Utility.Configuration.csproj
+++ b/Source/Mosa.Utility.Configuration/Mosa.Utility.Configuration.csproj
@@ -4,8 +4,8 @@
     <AssemblyTitle>Mosa.Utility.Compiler</AssemblyTitle>
     <Company>MOSA Project</Company>
     <Product>Mosa.Utility.Compiler</Product>
-    <Copyright>Copyright © 2021</Copyright>
-    <LangVersion>8.0</LangVersion>
+    <copyright>Copyright © 2022</copyright>
+    <LangVersion>9.0</LangVersion>
     <BaseAddress>285212672</BaseAddress>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <RemoveIntegerChecks>False</RemoveIntegerChecks>
