--- a/Source/Mosa.Utility.DebugEngine/Mosa.Utility.DebugEngine.csproj
+++ b/Source/Mosa.Utility.DebugEngine/Mosa.Utility.DebugEngine.csproj
@@ -4,9 +4,9 @@
     <AssemblyTitle>Mosa.Utility.DebugEngine</AssemblyTitle>
     <Company>MOSA Project</Company>
     <Product>Mosa.Utility.DebugEngine</Product>
-    <Copyright>Copyright © 2021</Copyright>
+    <copyright>Copyright © 2022</copyright>
     <DebugType>full</DebugType>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>9.0</LangVersion>
     <OutputPath>..\..\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <NoWarn>1591</NoWarn>
