--- a/Source/Mosa.Workspace.GDB.Debug/Mosa.Workspace.GDB.Debug.csproj
+++ b/Source/Mosa.Workspace.GDB.Debug/Mosa.Workspace.GDB.Debug.csproj
@@ -5,9 +5,9 @@
 		<AssemblyTitle>Mosa.Workspace.GDB.Debug</AssemblyTitle>
 		<Company>MOSA Project</Company>
 		<Product>Mosa.Workspace.GDB.Debug</Product>
-		<Copyright>Copyright © 2021</Copyright>
+		<copyright>Copyright © 2022</copyright>
 		<DebugType>full</DebugType>
-		<LangVersion>8.0</LangVersion>
+		<LangVersion>9.0</LangVersion>
 		<OutputPath>..\..\bin\</OutputPath>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<NoWarn>1591</NoWarn>
