--- a/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
+++ b/Source/Mosa.Packages/Mosa.Tools.Package.nuspec
@@ -30,8 +30,8 @@
 		<file src="..\..\bin\Mosa.Tool.Explorer.exe" target="tools" />
 		<file src="..\..\bin\Mosa.Tool.Debugger.exe" target="tools" />
 		<file src="..\..\bin\Mosa.Tool.Launcher.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Compiler.exe" target="tools" />
-		<file src="..\..\bin\Mosa.Tool.Launcher.Console.exe" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Compiler.dll" target="tools" />
+		<file src="..\..\bin\Mosa.Tool.Launcher.Console.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.BootImage.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.Configuration.dll" target="tools" />
 		<file src="..\..\bin\Mosa.Utility.DebugEngine.dll" target="tools" />
