More changes + remove added Korlib classes (compiler crash)

--- a/Source/Mosa.Demo.MyWorld.x86/Properties/launchSettings.json
+++ b/Source/Mosa.Demo.MyWorld.x86/Properties/launchSettings.json
@@ -2,8 +2,8 @@
 	"profiles": {
 		"Mosa.Demo.MyWorld.x86": {
 			"commandName": "Executable",
-			"executablePath": "..\\bin\\Mosa.Tool.Launcher.exe",
-			"commandLineArgs": "Mosa.Demo.MyWorld.x86.dll",
+			"executablePath": "dotnet",
+			"commandLineArgs": "..\\bin\\Mosa.Tool.Launcher.dll Mosa.Demo.MyWorld.x86.dll",
 			"workingDirectory": "..\\..\\bin"
 		}
 	}
