Add Limine bootloader (closes #973) (#974)
* Add Limine bootloader (closes #973)

* Requested changes

* Changes

Co-authored-by: AnErrupTion <anerruption@disroot.org>

--- a/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
+++ b/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
@@ -77,5 +77,11 @@
     <EmbeddedResource Include="..\..\Tools\raspberrypi-firmware\start.elf">
       <Link>Resources\raspberrypi-firmware\start.elf</Link>
     </EmbeddedResource>
+	  <EmbeddedResource Include="..\..\Tools\limine\limine.sys">
+		  <Link>Resources\limine\limine.sys</Link>
+	  </EmbeddedResource>
+	  <EmbeddedResource Include="..\..\Tools\limine\limine-cd.bin">
+		  <Link>Resources\limine\limine-cd.bin</Link>
+	  </EmbeddedResource>
   </ItemGroup>
 </Project>
