--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -64,13 +64,13 @@ jobs:
           name: Nuget Packages
           path: bin\nupkg
       - name: Unit Tests - All Performance Optimizations
-        run: bin\Mosa.Utility.UnitTests.exe -oMax -s Emulator.Display=false
+        run: dotnet bin\Mosa.Utility.UnitTests.dll -oMax -s Emulator.Display=false
       - name: Unit Tests - No Optimizations
-        run: bin\Mosa.Utility.UnitTests.exe -oNone -s Emulator.Display=false
+        run: dotnet bin\Mosa.Utility.UnitTests.dll -oNone -s Emulator.Display=false
       - name: Test Demo - Mosa.Demo.HelloWorld.x86 
-        run: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.Demo.HelloWorld.x86.dll -s Launcher.Test=true
+        run: dotnet bin\Mosa.Tool.Launcher.Console.dll bin\Mosa.Demo.HelloWorld.x86.dll -s Launcher.Test=true
       - name: Test Demo - Mosa.Demo.CoolWorld.x86 
-        run: bin\Mosa.Tool.Launcher.Console.exe bin\Mosa.Demo.CoolWorld.x86.dll -s Launcher.Test=true
+        run: dotnet bin\Mosa.Tool.Launcher.Console.dll bin\Mosa.Demo.CoolWorld.x86.dll -s Launcher.Test=true
       - name: Publish Package - Mosa.Tools.Package
         run: dotnet nuget push bin\nupkg\Mosa.Tools.Package.${{ env.BUILD_VERSION }}.${{ steps.mosa-project-build-number.outputs.build-number }}.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json
         if: github.event_name == 'push' && github.repository == 'mosa/MOSA-Project' && github.ref == 'refs/heads/master'
